# KolosSo2_OK

./: CMakeLists.txt  README.md  client.c  server.c
